--- a/index.html
+++ b/index.html
@@ -4,12 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
+
+    <!----Link para el favicon------->
+    <link rel="icon" type="image/x-icon" href="./Assets/img/favicon-32x32.png">
 
     <!--Link para iconos font awesome-->
     <script src="https://kit.fontawesome.com/3bf1bbdf14.js" crossorigin="anonymous"></script>
+
+    <!----Fonts-de google ------------>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;500;700&family=Space+Mono:wght@400;700&family=Ubuntu:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
+
+    <link rel="stylesheet" href="./Assets/css/styles.css">
 </head>
+
 <body>
     
+    <!--Encabezado----->
+    <header id="header" class="header">
+<img src="./Assets/img/logo.svg " class="header_title" alt="logo principal de la aplicacion">
+    </header>
+
+    <!--Main section-->
+    <main id="main" class="main">
+        <form id="main-form" class="form">
+            <div class="form_box_label">Bill</label>
+                <div class="form_box_inputs">
+                    <img src="./Assets/img/icon-dollar.svg" alt="Simbolo de dollar">
+                        <input type="number" id="total bill">
+                </div>
+             </div>
+
+
+
+
+
 </body>
 </html>
