se empieza el encabezado y se agregan imagenes

--- a/index.html
+++ b/index.html
@@ -34,12 +34,36 @@
     <!--Main section-->
     <main id="main" class="main">
         <form id="main-form" class="form">
-            <div class="form_box_label">Bill</label>
-                <div class="form_box_inputs">
-                    <img src="./Assets/img/icon-dollar.svg" alt="Simbolo de dollar">
+             <div class="form_box_label">Bill</label>
+                 <div class="form_box_inputs">
+                        <img src="./Assets/img/icon-dollar.svg" alt="Simbolo de dollar">
                         <input type="number" id="total bill">
                 </div>
              </div>
+
+             <div class="form__box">
+                     <label class="form__box__label">Select Tip %</label>
+
+
+             <div class="form_box_container" id="form-btns">
+                        <button type="button" class="form_box_container_btn" value="0.05">5%</button>
+                        <button type="button" class="form__box__container__btn" value="0.10">10%</button>
+                        <button type="button" class="form__box__container__btn" value="0.15">15%</button>
+                        <button type="button" class="form__box__container__btn" value="0.25">25%</button>
+                        <button type="button" class="form__box__container__btn" value="0.50">50%</button>
+                        <input class="form__box__container__btn" type="text" placeholder="Custom" id="custom-tip">
+                    </div>
+                
+             </div>
+
+             <div class="form__box">
+                <label class="form__box__label">Number of People</label>
+                <div class="form__box__inputs">
+                    <img src="./Assets/img/icon-person.svg" alt="icono de una persona">
+                    <input type="number" id="total-people">
+                </div>
+              </div>
+              
 
 
 
